# NetflixStats

./: README.md
netflixStats/: main.py  pyproject.toml
netflixStats/netflixstats/: database_connector.py  extract.py  main.py  models.py  netflix_stats.py  plot.py
netflixStats/tests/: test_netflixstats.py
