[tool.poetry]
name = "netflixStats"
version = "0.1.0"
description = ""
authors = ["v.gsteiger@unibas.ch <v.gsteiger@unibas.ch>"]

[tool.poetry.dependencies]
python = "^3.6"
IMDbPY = "^6.8"
click = "^7.1.2"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
my-script = "netflixstats.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

